--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,13 @@
 
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>net.kemitix</groupId>
+    <artifactId>kemitix-parent</artifactId>
+    <version>5.3.0</version>
+    <relativePath/>
+  </parent>
+
   <groupId>net.kemitix.camel</groupId>
   <artifactId>camel-trello</artifactId>
   <packaging>jar</packaging>
