--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,9 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+    <tiles-maven-plugin.version>2.17</tiles-maven-plugin.version>
+    <kemitix-tiles.version>2.10.0</kemitix-tiles.version>
   </properties>
 
   <dependencyManagement>
@@ -63,23 +66,18 @@
     <defaultGoal>install</defaultGoal>
 
     <plugins>
-      
+
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <groupId>io.repaint.maven</groupId>
+        <artifactId>tiles-maven-plugin</artifactId>
+        <version>${tiles-maven-plugin.version}</version>
+        <extensions>true</extensions>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-      
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-resources-plugin</artifactId>
-        <version>3.2.0</version>
-        <configuration>
-          <encoding>UTF-8</encoding>
+          <tiles>
+            <tile>net.kemitix.tiles:maven-plugins:${kemitix-tiles.version}</tile>
+            <tile>net.kemitix.tiles:compiler-jdk-8:${kemitix-tiles.version}</tile>
+            <tile>net.kemitix.tiles:testing:${kemitix-tiles.version}</tile>
+          </tiles>
         </configuration>
       </plugin>
 
