--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <lombok.version>1.18.12</lombok.version>
     <trello-java-wrapper.version>0.14</trello-java-wrapper.version>
     <mockito.version>3.5.10</mockito.version>
+    <assertj-core.version>3.17.2</assertj-core.version>
   </properties>
 
   <dependencyManagement>
@@ -82,6 +83,12 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
       <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>${assertj-core.version}</version>
       <scope>test</scope>
     </dependency>
 
